Bug 95376 - Tab stops incorrectly indented by 5cm when it's 0cm in MS Word
Summary: Tab stops incorrectly indented by 5cm when it's 0cm in MS Word
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.3.2 release
Hardware: Other All
: medium minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.2.0 target:5.1.2 target:5.0.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-10-28 02:35 UTC by Matthew Holloway
Modified: 2020-10-01 11:00 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document (13.31 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-10-28 02:35 UTC, Matthew Holloway
Details
How Microsoft Office 2013 renders the document (39.21 KB, image/png)
2015-10-28 02:37 UTC, Matthew Holloway
Details
How LibreOffice renders the document (34.04 KB, image/png)
2015-10-28 02:38 UTC, Matthew Holloway
Details
example compared LO 502-503 (77.11 KB, image/jpeg)
2015-10-28 15:40 UTC, Timur
Details
example compared Word 2010 2013 (80.66 KB, image/jpeg)
2016-01-15 18:20 UTC, Timur
Details
printscreen of GOOD and BAD when bibisecting (25.76 KB, application/x-7z-compressed)
2016-01-18 13:14 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Holloway 2015-10-28 02:35:43 UTC
Created attachment 120028 [details]
Example document

In the attached document there are numbered paragraphs that are indented by 5.25 and 5.85cm in LibreOffice but only 0cm in MS Office 2013.

The style for numbered paragraphs is Aligned at: 5.25 cm and Indent at: 5.85 cm however MS Office doesn't use these.
Comment 1 Matthew Holloway 2015-10-28 02:37:40 UTC
Created attachment 120029 [details]
How Microsoft Office 2013 renders the document
Comment 2 Matthew Holloway 2015-10-28 02:38:23 UTC
Created attachment 120030 [details]
How LibreOffice renders the document
Comment 3 Timur 2015-10-28 15:40:11 UTC
Created attachment 120047 [details]
example compared LO 502-503

Thank you for reporting, but please always check before with master version from http://dev-builds.libreoffice.org/daily/master/ or using Separate Install GUI tool from https://flosmind.wordpress.com/si-gui/.
I'll close this one as WFM because 5.0.3 seems right. If you feel that's inappropriate, feel free to reopen.
Comment 4 Timur 2015-10-28 16:08:47 UTC
LO 5.0.3.2 changed behavior and in it list indent is fixed, but there's still a problem with tab stops, so I won't close the bug but rather confirm it and update the title. 
Version needs to be set to 5.0.3.2 when it's available.
One needs to be aware that LO 5.0.3.1 and before displayed the list as MS Office 2010, while Office 2013 renders it differently.
Comment 5 Timur 2016-01-15 18:20:45 UTC
Created attachment 121959 [details]
example compared Word 2010 2013

LO 5.0.3.1 and before displayed the list in "Background" as MS Office 2010 and 2013. 
Matthew wrote that Office 2013 renders it differently, but that's not what I see  myself when I open it properly.
So, I conclude that LO 5.0.3.2 and on has this bug.
Comment 6 Joel Madero 2016-01-16 19:35:33 UTC
Can someone explain what the bibisect is looking for here? The bug is a bit muddled since something appears to be fixed but something else seems to be broken?

Personally I'd prefer a new bug report but if someone could explain to me *exactly* what to look for (and what versions I can compare to see good/bad) then I'll do so and try to bibisect. 

I quickly checked 4.4 and 5.2 and nothing immediately stood out as different (and thus a regression that can be checked).

Thanks
Comment 7 raal 2016-01-18 13:14:17 UTC
Created attachment 122055 [details]
printscreen of GOOD and BAD when bibisecting


 f24dcbd959a63eccf756d0475e258aa2ecb60a3e is the first bad commit
commit f24dcbd959a63eccf756d0475e258aa2ecb60a3e
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue Sep 22 00:36:09 2015 -0700

    source f4badd9a485f32f787d78431ed673e2932973887

    source f4badd9a485f32f787d78431ed673e2932973887

:040000 040000 ff8a952f318cd01cc5ad0d53cf0544c1b8bba747 a118dafd51b80e6f9963244dc07fd19aeb8feb4c M      instdir

author	Miklos Vajna <vmiklos@collabora.co.uk>	2015-09-22 06:47:03 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2015-09-22 06:47:26 (GMT)
commit f4badd9a485f32f787d78431ed673e2932973887 (patch)
tdf#92454 DOCX import: allow overriding para prop from num style in para style
Comment 8 raal 2016-01-18 13:18:05 UTC
This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna; Could you possibly take a look at this one? Thanks
Comment 9 Commit Notification 2016-01-26 12:23:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3915bf2dc877d5f1140798e24933db0f21386a4a

tdf#95376 DOCX import: fix incorrectly indented tab stops

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-02-18 09:30:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8b4fe8bfb739d60fe53ee6f3e8366225a7d15a67&h=libreoffice-5-1

tdf#95376 DOCX import: fix incorrectly indented tab stops

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-02-18 15:59:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6ecfd6bffb23a1a326a5433e6b9170b938fac77c&h=libreoffice-5-0

tdf#95376 DOCX import: fix incorrectly indented tab stops

It will be available in 5.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.